--- a/index.html
+++ b/index.html
@@ -1,77 +1,254 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
+
   <title>Frontend Mentor | Recipe page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    @font-face {
+      font-family: Outfit;
+      src: url("assets/fonts/outfit/Outfit-VariableFont_wght.ttf");
+    }
+
+    @font-face {
+      font-family: young-serif;
+      src: url("assets/fonts/young-serif/YoungSerif-Regular.ttf");
+    }
+
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+
+    html {
+      height: 100%;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background-color: #f3e5d8;
+      font-family: Outfit, sans-serif;
+      color: #3f3a36;
+    }
+
+    ol,
+    ul {
+      margin-left: 20px;
+    }
+
+    li {
+      line-height: 2;
+      padding-left: 20px;
+    }
+
+    li::marker {
+      color: hsl(332, 51%, 32%);
+      font-size: 0.8em;
+    }
+
+    main {
+      background-color: white;
+      display: flex;
+      flex-direction: column;
+      width: 736px;
+      border-radius: 15px;
+      padding: 40px;
+    }
+
+    p {
+      font-size: 16px;
+      line-height: 1.5;
+    }
+
+    h1,
+    h2,
+    h3 {
+      font-family: young-serif, sans-serif;
+    }
+
+    section {
+      margin-top: 30px;
+    }
+
+    .description {
+      margin-top: 30px;
+    }
+
+    .section-title {
+      color: hsl(14, 45%, 36%);
+    }
+
+    .section-main {
+      margin-top: 20px;
+    }
+
+    hr {
+      margin-top: 30px;
+      border: 1px solid #e0e0e0;
+    }
+
+    .hero-image {
+      border-radius: 8px;
+    }
+
+    .time-estimate {
+      background-color: hsl(330, 100%, 98%);
+      padding: 20px;
+      border-radius: 8px;
+    }
+
+    .time-estimate__title {
+      color: hsl(332, 51%, 32%);
+      margin: 10px 0;
+    }
+
+    .nutrition__table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .nutrition__table tr:not(:last-of-type) {
+      border-bottom: 1px solid #e0e0e0;
+    }
+
+    .nutrition__table td {
+      padding: 16px;
+    }
+
+    .nutrition__value {
+      color: hsl(14, 45%, 36%);
+      font-weight: 700;
+    }
+
+    
   </style>
 </head>
+
 <body>
+  <main>
+    <img class="hero-image" src="assets/images/image-omelette.jpeg" />
 
-  Simple Omelette Recipe
+    <section class="overview">
+      <h1 class="overview_title">Simple Omelette Recipe</h1>
+      <p class="overview_description description">
+        An easy and quick dish, perfect for any meal. This classic omelette
+        combines beaten eggs cooked to perfection, optionally filled with your
+        choice of cheese, vegetables, or meats.
+      </p>
+    </section>
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+    <section class="time-estimate">
+      <h3 class="time-estimate__title">Preparation time</h3>
+      <ul>
+        <li><strong>Total:</strong> Approximately 10 minutes</li>
+        <li><strong>Preparation:</strong> 5 minutes</li>
+        <li><strong>Cooking:</strong> 5 minutes</li>
+      </ul>
+    </section>
 
-  Preparation time
+    <section>
+      <h2 class="section-title">Ingredients</h2>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+      <ul class="section-main">
+        <li>2-3 large eggs</li>
+        <li>Salt, to taste</li>
+        <li>Pepper, to taste</li>
+        <li>1 tablespoon of butter or oil</li>
+        <li>
+          Optional fillings: cheese, diced vegetables, cooked meats, herbs
+        </li>
+      </ul>
+    </section>
+    <hr />
+    <section>
+      <h2 class="section-title">Instructions</h2>
 
-  Ingredients
+      <ol class="section-main">
+        <li>
+          <strong>Beat the eggs: </strong>In a bowl, beat the eggs with a pinch of salt and
+          pepper until they are well mixed. You can add a tablespoon of water or
+          milk for a fluffier texture.
+        </li>
+        <li>
+          <strong>Heat the pan: </strong>Place a non-stick frying pan over medium heat and add
+          butter or oil.
+        </li>
+        <li>
+          <strong>Cook the omelette: </strong>Once the butter is melted and bubbling, pour in the
+          eggs. Tilt the pan to ensure the eggs evenly coat the surface.
+        </li>
+        <li>
+          <strong>Add fillings (optional): </strong>When the eggs begin to set at the edges but
+          are still slightly runny in the middle, sprinkle your chosen fillings
+          over one half of the omelette.
+        </li>
+        <li>
+          <strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one
+          edge and fold it over the fillings. Let it cook for another minute,
+          then slide it onto a plate.
+        </li>
+        <li><strong>Enjoy:</strong>Serve hot, with additional salt and pepper if needed.</li>
+      </ol>
+    </section>
+    <hr />
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
+    <section class="nutrition">
+      <h2 class="section-title">Nutrition</h2>
 
-  Instructions
+      <p class="description">
+        The table below shows nutritional values per serving without the
+        additional fillings.
+      </p>
+      <table  class="section-main nutrition__table">
+        <tbody>
+          <tr>
+            <td>Calories</td>
+            <td class="nutrition__value">277kcal</td>
+          </tr>
+          <tr>
+            <td>Carbs</td>
+            <td class="nutrition__value">0g</td>
+          </tr>
+          <tr>
+            <td>Protein</td>
+            <td class="nutrition__value">20g</td>
+          </tr>
+          <tr>
+            <td>Fat</td>
+            <td class="nutrition__value">22g</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </main>
 
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
+        href="#">Wilbur Hu</a>.
+    </div>
+  </footer>
 </body>
+
 </html>
