--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 <body>
   <main>
-    <img class="hero-image" src="assets/images/image-omelette.jpeg" />
+    <img class="hero-image" src="assets/images/image-omelette.jpeg" alt="hero-image" />
 
     <section class="overview">
       <h1 class="overview_title">Simple Omelette Recipe</h1>
@@ -246,7 +246,7 @@
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
-        href="#">Wilbur Hu</a>.
+        href="https://github.com/wilbur-hu">Wilbur Hu</a>.
     </div>
   </footer>
 </body>
